--- a/views/ski/skills.ejs
+++ b/views/ski/skills.ejs
@@ -15,6 +15,7 @@
         </li>
       <% }); %>
     </ul>
-    <a href="/">Home page</a>
+    <a href="/">Home page</a><br>
+    <a href="/skills/new">Add Skill</a>
   </body>
 </html>
