--- a/views/ski/skills.ejs
+++ b/views/ski/skills.ejs
@@ -9,6 +9,10 @@
     <ul>
       <% skills.forEach(function(s) { %>
         <li>
+          <form action="/skills/<%= s.id %>?_method=DELETE" class="delete-form" method='POST'>
+              <button type="submit">X</button>
+          </form>
+          <a href="/skills/<%= s.id %>"><%= s.skill %></a>
           <%= s.skill %>
             - 
           <%= s.have ? 'have' : 'have not' %>
